--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "example-express-gridfs",
+  "description": "",
+  "version": "1.0.0",
+  "main": "app.js",
+  "private": true,
   "dependencies": {
     "express": "4.18.2",
     "mongoose": "8.1.1",
     "multer": "1.4.5-lts.1"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node app"
+  },
+  "author": "Jonas Havers",
+  "license": "ISC"
 }
